# BevyRoguelike

./: Cargo.toml  README.md
assets/: template.ron
src/: camera.rs  components.rs  hud.rs  main.rs  map.rs  map_builder.rs  menus.rs  player.rs  render_utils.rs  renderutils.rs  resources.rs  spawner.rs  utils.rs
src/map_builder/: automata.rs  drunkard.rs  empty.rs  map.rs  mod.rs  prefab.rs  rooms.rs  themes.rs
src/spawner/: mod.rs  template.rs
src/systems/: camera.rs  chasing.rs  collisions.rs  combat.rs  end_turn.rs  fov.rs  mod.rs  mouse.rs  movement.rs  player_input.rs  random_move.rs  update_entities_visibility.rs  use_items.rs
src/ui/: equipment.rs  hud.rs  inventory.rs  menus.rs  mod.rs  popup.rs  splash_screen.rs  tooltips.rs
