[package]
name = "bevyroguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bracket-lib = "~0.8.1"
rand = "0.8.5"
# bevy = "0.7.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
