[package]
name = "bevyroguelike"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/thephet/BevyRoguelike"
keywords = ["gamedev", "bevy", "roguelike"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
# bevy = "=0.11"
bracket-lib = "0.8"
rand = "0.8"
serde = "1"
ron = "0.8"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
